--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,9 +12,57 @@ body {
   line-height: 1.5;
 }
 
-#search-box {
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+textarea {
+  resize: none;
+}
+
+button {
+  font: inherit;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+body.overflow {
+  overflow: hidden;
+}
+
+/* #search-box {
   font: inherit;
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+} */
+.input-container {
+  background-color: rgb(63, 63, 194);
+  padding: 15px;
+  text-align: center;
 }
