--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,3 +66,35 @@ body.overflow {
   padding: 15px;
   text-align: center;
 }
+
+.input {
+    background-color: #F4F4FD;
+      border-radius: 5px;
+      border: 1px solid #F4F4FD;
+      box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+      padding: 2px;
+}
+
+.btnInput {
+  background-color: #F4F4FD;
+  border-radius: 5px;
+  border: 1px solid #F4F4FD;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    padding: 2px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 30px;
+  gap: 15px;
+}
+
+.photo-card{
+  background-color: aliceblue;
+  border: 1px solid #F4F4FD;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
