--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -55,6 +55,11 @@ body.overflow {
   overflow: hidden;
 }
 
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 /* #search-box {
   font: inherit;
   padding: 8px;
